--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "formik": "^2.2.9",
+    "mongoose": "^7.1.1",
     "nodemon": "^2.0.22",
     "yup": "^1.1.1"
   }
